--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ body{
     hyphens: auto;
     font-size: 16px;
     line-height: 22px;
+    text-indent: 19px;
 }
 
 @media screen and (max-width: 1150px){
