--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
 
 ::-webkit-scrollbar{
     width: 16px;
@@ -135,6 +137,7 @@ body{
 .ui-standard>.center>.text-container>.chapter-title{
     margin: 0; padding: 0;
     margin-top: 50px;
+    margin-bottom: 15px;
     font-family: 'Source Serif Pro SemiBold';
     text-align: left;
     font-size: 25px;
@@ -142,7 +145,7 @@ body{
 
 .ui-standard>.center>.text-container>.paragraphe{
     margin: 0; padding: 0;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-family: 'Source Serif Pro';
     text-align: justify;
     hyphens: auto;
