--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body{
     margin: 0; padding: 0;
     margin-top: 50px;
     margin-bottom: 15px;
-    font-family: 'Source Serif Pro SemiBold';
+    font-family: 'Source Sans Pro SemiBold';
     text-align: left;
     font-size: 25px;
 }
