--- a/style.css
+++ b/style.css
@@ -46,11 +46,12 @@ body{
     position: fixed;
     top: 0; left: 0;
     width: 250px;
-    height: 100%;
+    height: calc(100% - 35px);
     margin: 0; padding: 0;
     overflow-y: auto;
     background-color: white;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .05);
+    /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, .05); */
+    background: linear-gradient(90deg, white 90%, rgb(250, 250, 250));
     z-index: 10;
 }
 
@@ -63,18 +64,38 @@ body{
     display: flex;
     align-items: center;
     cursor: pointer;
+    border-right: blueviolet 0 solid;
+    transition: .3s;
 }
 .menu-bar>.file:hover{
-    background-color: rgba(0, 0, 0, .035);
+    /* background-color: rgba(0, 0, 0, .035); */
+    border-right: blueviolet 2px solid;
+    padding: 0;
+}
+.menu-bar>.file:hover>.file-name{
+    text-overflow: clip;
+    transition: 0s;
 }
 .menu-bar>.file:active{
-    background-color: rgba(0, 0, 0, .1);
+    /* background-color: rgba(0, 0, 0, .1); */
+    border-right: blueviolet 252px solid;
 }
 
 .menu-bar>.file>.file-name{
     white-space: nowrap;
     text-overflow: ellipsis;
     font-family: 'Source Sans Pro';
+}
+
+.btn-bar{
+    position: fixed;
+    bottom: 0; left: 0;
+    height: 35px;
+    width: 250px;
+    margin: 0; padding: 0;
+    overflow-y: hidden;
+    background: linear-gradient(90deg, white 90%, rgb(250, 250, 250));
+    z-index: 9;
 }
 
 .ui-standard{
