--- a/style.css
+++ b/style.css
@@ -89,7 +89,29 @@ body{
     margin: 0; padding: 0;
     overflow-y: hidden;
     background: linear-gradient(90deg, white 90%, rgb(250, 250, 250));
+    display: flex;
+    flex-flow: row;
     z-index: 9;
+}
+
+.btn-btnbar{
+    height: 100%;
+    width: auto;
+    margin: 0;
+    margin-left: auto; margin-right: auto;
+    padding: 0;
+    display: flex;
+    align-items: center; justify-content: center;
+}
+
+.btn-btnbar>svg{
+    height: 100%; width: 100%;
+    margin: 0; padding: 0;
+    pointer-events: none;
+}
+
+.btn-btnbar>svg>path{
+    fill: black;
 }
 
 .ui-standard{
@@ -176,6 +198,61 @@ body{
     text-align: right;
     font-size: 16px;
     line-height: 22px;
+}
+
+.settings-modal{
+    position: fixed;
+    height: 500px;
+    width: 500px;
+    margin: 0; padding: 0;
+    top: calc(50% - 250px); left: calc(50% - 250px);
+    background-color: rgba(245, 245, 245, .9);
+    backdrop-filter: blur(4px);
+    border: 2px solid rgb(240, 240, 240);
+    border-radius: 8px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .035);
+    z-index: 1000;
+}
+
+.settings-modal>.title{
+    margin: 0; padding: 0;
+    margin-top: 20px; margin-bottom: 20px;
+    font-family: 'Source Sans Pro SemiBold';
+    font-size: 25px;
+    text-align: center;
+}
+
+.settings-modal>.settings-bar{
+    margin: 0; padding: 0;
+    padding-left: 25px; padding-right: 25px;
+    padding-top: 15px; padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.settings-modal>.settings-bar>.settingsbar-title{
+    margin: 0; padding: 0;
+    font-size: 16px;
+}
+
+.settings-modal>.settings-bar>.settingsbar-toggle-area{
+    margin: 0; padding: 0;
+    background-color: rgb(185, 185, 185);
+    height: 25px;
+    width: 80px;
+    border-radius: 17.5px;
+    display: flex;
+    /* align-items: center; */
+    padding: 2.5px;
+}
+
+.settings-modal>.settings-bar>.settingsbar-toggle-area>.settingsbar-togglearea-checkbtn{
+    margin: 0; padding: 0;
+    background-color: white;
+    height: 20px;
+    width: 40px;
+    border-radius: 17.5px;
 }
 
 @media screen and (max-width: 1350px){
