--- a/style.css
+++ b/style.css
@@ -245,14 +245,24 @@ body{
     display: flex;
     /* align-items: center; */
     padding: 2.5px;
+    cursor: pointer;
 }
 
 .settings-modal>.settings-bar>.settingsbar-toggle-area>.settingsbar-togglearea-checkbtn{
     margin: 0; padding: 0;
-    background-color: white;
+    background-color: rgb(230, 230, 230);
     height: 20px;
     width: 40px;
     border-radius: 17.5px;
+    -webkit-transition: all .5s cubic-bezier(0.09, 1.04, 0.33, 0.96);
+    transition: all .5s cubic-bezier(0.09, 1.04, 0.33, 0.96);
+}
+
+.mask{
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    margin: 0; padding: 0;
 }
 
 @media screen and (max-width: 1350px){
