--- a/style.css
+++ b/style.css
@@ -126,6 +126,19 @@ body{
     z-index: 5;
 }
 
+#pop{
+    color: burlywood;
+    font-size: 50px;
+    font-family: 'Source Sans Pro SemiBold';
+    width: 100%;
+    height: 100px;
+    margin: 0; padding: 0;
+    background: linear-gradient(rgb(230, 230, 230), white);
+    text-align: center;
+    display: flex;
+    align-items: center; justify-content: center;
+}
+
 .ui-standard>.center{
     margin: 0; padding: 0;
     margin-left: auto; margin-right: auto;
