--- a/component/menu-bar.html
+++ b/component/menu-bar.html
@@ -1,10 +1,10 @@
 <div class="menu-bar">
 
-    <div class="file" onclick="location.href = 'https://stage3.abeille.com/shymedhve';" title="Acöhnme">
+    <div class="file" onclick="location.href = indexPhpPath;" title="Acöhnme">
         <p class="file-name">Acöhnme</p>
     </div>
 
-    <div class="file" onclick="location.href = 'https://stage3.abeille.com/shymedhve/page/polsenb.php';" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
+    <div class="file" onclick="location.href = polsenbPhpPath;" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
         <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
     </div>
 
