--- a/component/menu-bar.html
+++ b/component/menu-bar.html
@@ -4,6 +4,10 @@
         <p class="file-name">Acöhnme</p>
     </div>
 
+    <div class="file" onclick="location.href = crrdwallPhpPath;" title="Mur de la C.R.R.D.">
+        <p class="file-name">Mur de la C.R.R.D.</p>
+    </div>
+
     <div class="file" onclick="location.href = polsenbPhpPath;" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
         <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
     </div>
