--- a/component/menu-bar.html
+++ b/component/menu-bar.html
@@ -12,12 +12,8 @@
         <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
     </div>
 
-    <div class="btn-bar">
-        <div class="btn-btnbar" id="openSettingsModal">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.105 5.349c-.642-.183-1.343-.013-1.761.507A9.805 9.805 0 002.849 8.44c-.242.622-.038 1.314.44 1.778l.476.46a1.84 1.84 0 010 2.644l-.475.46c-.48.464-.683 1.156-.44 1.778.365.94.872 1.81 1.494 2.584.418.52 1.12.69 1.761.507l.633-.18a1.84 1.84 0 012.289 1.322l.16.64c.163.647.662 1.17 1.322 1.27a9.898 9.898 0 002.982 0c.66-.1 1.159-.623 1.321-1.27l.161-.64a1.84 1.84 0 012.29-1.322l.632.18c.642.183 1.343.013 1.761-.507a9.806 9.806 0 001.495-2.584c.241-.622.038-1.314-.44-1.778l-.476-.46a1.84 1.84 0 010-2.644l.475-.46c.48-.464.682-1.156.44-1.778a9.805 9.805 0 00-1.494-2.584c-.418-.52-1.12-.69-1.761-.507l-.633.18a1.84 1.84 0 01-2.289-1.322l-.16-.64c-.163-.647-.662-1.17-1.322-1.27a9.893 9.893 0 00-2.982 0c-.66.1-1.159.623-1.321 1.27l-.161.64a1.84 1.84 0 01-2.29 1.322l-.632-.18zM12 15.68a3.681 3.681 0 100-7.362 3.681 3.681 0 000 7.362z" fill="#fff" fill-opacity="0.62"></path>
-            </svg>
-        </div>
+    <div class="btn-bar" id="openSettingsModal">
+        <img src="https://icon-library.com/images/white-settings-icon/white-settings-icon-2.jpg">Paramètres
     </div>
 
 </div>
