--- a/component/menu-bar.html
+++ b/component/menu-bar.html
@@ -12,7 +12,7 @@
         <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
     </div>
 
-    <div class="btn-bar" id="openSettingsModal">
+    <div class="btn-bar" id="openSettingsModal" onclick="openSettingsModal();">
         <img src="https://icon-library.com/images/white-settings-icon/white-settings-icon-2.jpg">Paramètres
     </div>
 
