--- a/component/settings.html
+++ b/component/settings.html
@@ -1,9 +1,9 @@
 <div class="settings-modal">
     <p class="title">Paramètres</p>
     <div class="settings-bar">
-        <p class="settingsbar-title">Changer de thème</p>
-        <div class="settingsbar-toggle-area" onclick="toggleSetting('theme');">
-            <div class="settingsbar-togglearea-checkbtn" id="sb_ta_cb_theme"></div>
+        <p class="settingsbar-title">Désactiver les ombres</p>
+        <div class="settingsbar-toggle-area" onclick="toggleSetting('deactivateshadows');">
+            <div class="settingsbar-togglearea-checkbtn" id="sb_ta_cb_deactivateshadows"></div>
         </div>
     </div>
 </div>
