--- a/component/menu-bar.html
+++ b/component/menu-bar.html
@@ -4,12 +4,16 @@
         <p class="file-name">Acöhnme</p>
     </div>
 
-    <div class="file" onclick="location.href = crrdwallPhpPath;" title="Mur de la C.R.R.D.">
-        <p class="file-name">Mur de la C.R.R.D.</p>
+    <div class="file" onclick="location.href = lunionPhpPath;" title="L'Union">
+        <p class="file-name">L'Union</p>
     </div>
 
+    <!-- <div class="file" onclick="location.href = crrdwallPhpPath;" title="Mur de la C.R.R.D.">
+        <p class="file-name">Mur de la C.R.R.D.</p>
+    </div> -->
+
     <div class="file" onclick="location.href = polsenbPhpPath;" title="Plan officiel de lancement du système économique de la Nouvelle Birmanie">
-        <p class="file-name">Plan officiel de lancement du système économique de la Nouvelle Birmanie</p>
+        <p class="file-name">POLSÉNB</p>
     </div>
 
     <div class="btn-bar" id="openSettingsModal" onclick="openSettingsModal();">
