--- a/component/settings.html
+++ b/component/settings.html
@@ -1,7 +1,7 @@
 <div class="settings-modal">
     <p class="title">Paramètres</p>
     <div class="settings-bar">
-        <p class="settingsbar-title">Désactiver les ombres</p>
+        <p class="settingsbar-title">Je suis sur Firefox</p>
         <div class="settingsbar-toggle-area" onclick="toggleSetting('deactivateshadows');">
             <div class="settingsbar-togglearea-checkbtn" id="sb_ta_cb_deactivateshadows"></div>
         </div>
