--- a/style.css
+++ b/style.css
@@ -172,14 +172,29 @@ body{
     /* border: 1px dashed red; */
 }
 
+.winner{
+    background: repeat center rgb(171, 218, 226);
+    background-size: contain;
+}
+
 .new-box>.title{
     margin: 0; padding: 0;
     margin-top: 20px;
     font-family: 'Source Sans Pro SemiBold';
     text-align: left;
     font-size: 25px;
-    text-indent: 22.5px;
+    margin-left: 22.5px; margin-right: 22.5px;
     color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* border: 1px dashed red; */
+}
+
+.new-box>.title>img{
+    pointer-events: none;
+    height: 50px;
+    margin-right: 7.5px;
 }
 
 .new-box>.content, .new-box>.content>*{
@@ -197,6 +212,14 @@ body{
 
 .new-box>.content>*{
     padding: 0;
+}
+
+.new-box>img{
+    pointer-events: none;
+    border-radius: 50%;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .15);
+    margin-bottom: 15px;
+    margin-left: 22.5px;
 }
 
 .new-box>.content>.bared{
@@ -271,10 +294,14 @@ body{
     width: 100px; height: 100px;
     margin: 0; padding: 0;
     pointer-events: none;
-    background: url('./img/crrd-go.jpg') center;
+    background: url('./img/fuse.png') center;
     background-size: cover;
     border-radius: 50%;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .15);
+}
+
+.bio-box>.lunion-pdp{
+    background-image: url('https://th.bing.com/th/id/OIP.leK1mQfjclZzRrdQlVhpogHaHb?pid=ImgDet&rs=1');
 }
 
 .badge-container{
@@ -291,6 +318,7 @@ body{
     width: 100%;
     height: 27.5px;
     margin: 0; padding: 0;
+    margin-bottom: 5px;
     background-color: rgb(90, 214, 52);
     /* box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1); */
     border-radius: 4px;
@@ -298,6 +326,11 @@ body{
     font-family: 'Source Sans Pro SemiBold';
     display: flex;
     align-items: center; justify-content: center;
+}
+
+.badge-container>.darkbadge{
+    background-color: rgb(97, 97, 97);
+    color: white;
 }
 
 .bio-box>.text-container{
@@ -319,7 +352,7 @@ body{
 
 .bio-box>.text-container>.autobiography{
     margin: 0; padding: 0;
-    margin-top: 10px;
+    margin-top: 6px;
     font-family: 'Source Sans Pro';
     text-align: justify;
     hyphens: auto;
@@ -552,4 +585,28 @@ body{
     .ui-standard>.center>*>*{
         width: 600px;
     }
+}
+
+table{
+    width: 300px;
+    margin: 0; padding: 0;
+    margin-left: 22.5px;
+    margin-bottom: 22.5px;
+    border-collapse: collapse;
+    border-radius: 4px;
+    overflow: hidden;
+    background-color: rgb(220, 220, 220);
+}
+
+tr{
+    height: 35px;
+    text-indent: 10px;
+}
+/* tr:hover{
+    background-color: rgb(205, 205, 205);
+} */
+
+th{
+    text-align: left;
+    background-color: rgb(190, 190, 190);
 }
